--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,6 +6,8 @@
 	  <p>
 		<%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg" %>
 		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-lg" %>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/tmp71-ql_38" frameborder="0" allowfullscreen></iframe>
+		
 	</p>
 	<% end %>
 
