update show view, add glyphicons, and change root path

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -8,6 +8,9 @@ $jumbotron-bg:               #ecf0f1;
 $body-bg:                    #e74c3c;
 
 @import 'bootstrap';
+@import "bootstrap-sprockets";
+@import 'bootstrap';
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
 
 .center {
 	text-align: center;
