--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,15 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "About", about_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to 'New Pin', new_pin_path %></li>
+          <li>
+          <button type="button" class="btn btn-info navbar-btn"><%= link_to new_pin_path do %>
+             <span class="glyphicon glyphicon-plus-sign"></span> New Pin
+             <% end %>
+          </li></button>
+            <%= link_to new_pin_path do %>
+             <span class="glyphicon glyphicon-plus-sign"></span> New Pin
+             <% end %>
+          </li>
           <li><%= link_to "Account Settings", edit_user_registration_path %></li>
           <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
         <% end %>  
