--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,11 +1,26 @@
-<%= image_tag @pin.image.url(:medium) %>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading center">
+        <%= image_tag @pin.image.url(:medium) %>
+      </div>
+      <div class="panel-body">
+        <p><%= @pin.description %></p>
+        <p><strong><%= @pin.user.email if @pin.user %></strong></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @pin.description %>
-</p>
+        <% if @pin.user == current_user %>
+         <%= link_to edit_pin_path(@pin) do %>
+           <span class="glyphicon glyphicon-edit"></span>
+           Edit
+          <% end %>
+         <%= link_to pins_path do %>
+         <span class="glyphicon glyphicon-arrow-left"></span>
+           Back
+          <% end %>
+        <% end %>
 
-<% if @pin.user == current_user %>
-<%= link_to 'Edit', edit_pin_path(@pin) %> |
-<% end %>
-<%= link_to 'Back', pins_path %>
+      </div>
+    </div>
+  </div>
+
+</div>
