changed the name and removed video

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,10 +1,10 @@
 <div class="jumbotron center">
-	<h1>Welcome to my 1st Web App</h1>
+	<h1>Welcome to Trade Off</h1>
 	
 	  <p>
 		<%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg" %>
 		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-lg" %>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/tmp71-ql_38" frameborder="0" allowfullscreen></iframe>
+
 		
 	</p>
 	
