--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,9 +6,9 @@
       <%= link_to image_tag(pin.image.url(:medium)), pin %>
       <div class="panel-body">
         <%= pin.description %><br/>
-        <strong><%= pin.user.name if pin.user %></strong>
+        <strong><%= pin.user.name if pin.user %></strong></p>
 
-        <% if current_user && pin.user == current_user %>
+         <% if pin.user == current_user %>
           <div class="actions">
             <%= link_to edit_pin_path(pin) do %>
               <span class="glyphicon glyphicon-edit"></span>
