--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,5 @@
-<div class="jumbotron center">
-	<h1>About us<h1>
-	<p>We are working on our one month rails pintersting app!</p>
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+  <div style="font-family: 'Montserrat', serif;">Welcome to my App</div>
+    
+   
