--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,12 +1,14 @@
 <div class="jumbotron center">
-	<h1>Welcome to Trade Off</h1>
-	
-	  <p>
-		<%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg" %>
-		<%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-lg" %>
+<link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+<div style="font-family: 'Pacifico', serif;">
+		<h1>Welcome to Trade Off</h1>
+	</div>
+	 	 <p>
+			<%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-lg" %>
+			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-lg" %>
 
 		
-	</p>
+		</p>
 	
 
 </div>
