--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,3 +1,6 @@
+<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+
+<div style="font-family: 'Montserrat', serif;">
 <%= render 'pages/home' unless user_signed_in? %>
 
 <div id="pins" class="transitions-enabled">
@@ -23,6 +26,7 @@
       </div>
     </div>
   <% end %>
+</div>
 </div>
 
 <div class="center">
