--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+<div style="font-family: 'Montserrat', serif;">
 <div class="panel panel-default">
   <div class="panel-heading">
     <h1>Sign up</h1>
