--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,6 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
-  <div style="font-family: 'Montserrat', serif;">Welcome to my App</div>
+  <div style="font-family: 'Montserrat', serif;">Welcome to my App <br/>
+  The only app</div>
     
    
